[package]
name = "koto_poetry"
version = "0.13.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
autobins = false
publish = false

[[example]]
name = "poetry"
path = "src/main.rs"

[dependencies]
koto = { path = "../../crates/koto", version = "^0.13.0" }
koto_random = { path = "../../libs/random", version = "^0.13.0" }

anyhow = { workspace = true }
hotwatch = { workspace = true }
indexmap = { workspace = true }
lazy_static = { workspace = true }
pico-args = { workspace = true }
rand = { workspace = true }
