[package]
name = "koto_wasm"
version = "0.10.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
koto = { path = "../../src/koto" }
wasm-bindgen = "0.2.71"
wee_alloc = "0.4.5"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
