[package]
name = "koto_wasm"
version = "0.11.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
koto = { path = "../../src/koto" }
wasm-bindgen = "0.2.71"

[dev-dependencies]
wasm-bindgen-test = "0.3.33" # Internal testing crate for wasm-bindgen
