[package]
name = "koto_wasm"
version = "0.11.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
rust-version = "1.64.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
koto = { path = "../../core/koto" }

wasm-bindgen.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
