[package]
name = "koto_color"
version = "0.17.0"
description = "A Koto library containing simple color utilities"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use `arc`, default features must be disabled.
arc = ["koto_runtime/arc"]
rc = ["koto_runtime/rc"]

[dependencies]
koto_runtime = { workspace = true }

derive_more = { workspace = true, features = ["from"] }
palette = { workspace = true }

[dev-dependencies]
koto_test_utils = { workspace = true }
