[package]
name = "koto_geometry"
version = "0.16.0"
description = "A Koto library with basic geometry types and operations"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use `arc`, default features must be disabled.
arc = ["koto_runtime/arc"]
rc = ["koto_runtime/rc"]

[dependencies]
glam = { workspace = true }

[dependencies.koto_runtime]
path = "../../crates/runtime"
version = "^0.16.0"
default-features = false

[dev-dependencies]
koto_test_utils = { path = "../../crates/test_utils", default-features = false }
