[package]
name = "koto_geometry"
version = "0.17.0"
description = "A Koto library with basic geometry types and operations"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use `arc`, default features must be disabled.
arc = ["koto_runtime/arc"]
rc = ["koto_runtime/rc"]

[dependencies]
koto_runtime = { workspace = true }

glam = { workspace = true }

[dev-dependencies]
koto_test_utils = { workspace = true }
