[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
koto_runtime = { path = "../../src/runtime", version = "^0.9.0"}
koto_serialize = { path = "../../src/serialize", version = "^0.9.0"}
ureq = "2.3.1"