[package]
name = "koto_json"
version = "0.14.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Koto library for working with JSON data"
homepage = "https://koto.dev"
repository = "https://github.com/koto-lang/koto"
keywords = ["scripting", "language", "koto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
koto_runtime = { path = "../../crates/runtime", version = "^0.14.0" }
koto_serialize = { path = "../../crates/serialize", version = "^0.14.0" }

serde_json = { workspace = true }

[dev-dependencies]
koto_test_utils = { path = "../../crates/test_utils", version = "^0.14.0" }
