[package]
name = "lib_tests"
version = "0.4.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2018"
publish = false
license = "MIT"
description = "A test runner for the standard Koto libraries"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
koto = { path = "../../src/koto", version = "^0.4.0"}
koto_json = { path = "../json", version = "^0.4.0"}
koto_random = { path = "../random", version = "^0.4.0"}
koto_tempfile = { path = "../tempfile", version = "^0.4.0"}
koto_toml = { path = "../toml", version = "^0.4.0"}
