[package]
name = "lib_tests"
version = "0.15.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
publish = false
license = "MIT"
description = "A test runner for the standard Koto libraries"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["arc"]
arc = ["koto/arc"]
rc = ["koto/rc"]

[dev-dependencies]
koto = { path = "../../crates/koto", version = "^0.15.0", default-features = false }
koto_color = { path = "../color", version = "^0.15.0" }
koto_geometry = { path = "../geometry", version = "^0.15.0" }
koto_json = { path = "../json", version = "^0.15.0" }
koto_random = { path = "../random", version = "^0.15.0" }
koto_regex = { path = "../regex", version = "^0.15.0" }
koto_tempfile = { path = "../tempfile", version = "^0.15.0" }
koto_toml = { path = "../toml", version = "^0.15.0" }
koto_yaml = { path = "../yaml", version = "^0.15.0" }
