[package]
name = "koto_random"
version = "0.15.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Koto library for working with random numbers"
homepage = "https://koto.dev"
repository = "https://github.com/koto-lang/koto"
keywords = ["scripting", "language", "koto"]

[dependencies]
koto_derive = { path = "../../crates/derive", version = "^0.15.0" }

lazy_static = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[dependencies.koto_runtime]
path = "../../crates/runtime"
version = "^0.15.0"
default-features = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }

[dev-dependencies]
koto_test_utils = { path = "../../crates/test_utils" }
