[package]
name = "koto_random"
version = "0.16.0"
description = "A Koto library for working with random numbers"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use `arc`, default features must be disabled.
arc = ["koto_runtime/arc"]
rc = ["koto_runtime/rc"]

[dependencies]
lazy_static = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[dependencies.koto_runtime]
path = "../../crates/runtime"
version = "^0.16.0"
default-features = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }

[dev-dependencies]
koto_derive = { path = "../../crates/derive", default-features = false }
koto_test_utils = { path = "../../crates/test_utils", default-features = false }
