[package]
name = "koto_random"
version = "0.17.0"
description = "A Koto library for working with random numbers"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use `arc`, default features must be disabled.
arc = ["koto_runtime/arc"]
rc = ["koto_runtime/rc"]

[dependencies]
koto_runtime = { workspace = true }

lazy_static = { workspace = true }
rand = { workspace = true, features = ["std", "os_rng"] }
rand_xoshiro = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }

[dev-dependencies]
koto_derive = { workspace = true }
koto_test_utils = { workspace = true }
