[package]
name = "koto_regex"
version = "0.15.0"
description = "A Koto library for working with regular expressions"
authors = ["jasal82 <johannes.asal@gmx.de>", "irh <ian.r.hobson@gmail.com>"]

edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use `arc`, default features must be disabled.
arc = ["koto_runtime/arc"]
rc = ["koto_runtime/rc"]

[dependencies]
regex = { workspace = true }

[dependencies.koto_runtime]
path = "../../crates/runtime"
version = "^0.15.0"
default-features = false

[dev-dependencies]
koto_test_utils = { path = "../../crates/test_utils", default-features = false }
