[package]
name = "koto_regex"
version = "0.17.0"
description = "A Koto library for working with regular expressions"
authors = ["jasal82 <johannes.asal@gmx.de>", "irh <ian.r.hobson@gmail.com>"]

edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use `arc`, default features must be disabled.
arc = ["koto_runtime/arc"]
rc = ["koto_runtime/rc"]

[dependencies]
koto_runtime = { workspace = true }

regex = { workspace = true }

[dev-dependencies]
koto_test_utils = {workspace = true}
