[package]
name = "koto_tempfile"
version = "0.14.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Koto library for working with temporary files"
homepage = "https://koto.dev"
repository = "https://github.com/koto-lang/koto"
keywords = ["scripting", "language", "koto"]

[features]
default = ["arc"]
arc = ["koto_runtime/arc"]
rc = ["koto_runtime/rc"]

[dependencies]
tempfile = { workspace = true }

[dependencies.koto_runtime]
path = "../../crates/runtime"
version = "^0.14.0"
default-features = false

[dev-dependencies]
koto_test_utils = { path = "../../crates/test_utils" }
