[package]
name = "koto_toml"
version = "0.16.0"
description = "A Koto library for working with TOML data"

authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use `arc`, default features must be disabled.
arc = ["koto_runtime/arc"]
rc = ["koto_runtime/rc"]

[dependencies]
toml = { workspace = true }

[dependencies.koto_runtime]
path = "../../crates/runtime"
version = "^0.16.0"
default-features = false

[dependencies.koto_serde]
path = "../../crates/serde"
version = "^0.16.0"
default-features = false

[dev-dependencies]
koto_test_utils = { path = "../../crates/test_utils", default-features = false }
